--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Pasifika Open Card Sorting Tool - Researcher Accounts</title>
+  <title>Pacific Card Sorting Tool - Researcher Accounts</title>
   
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -169,7 +169,7 @@
     
     #publicResultsLinkRow { display: flex; gap: 0.5rem; align-items: center; margin-top: 0.5rem; }
     
-    /* ===== Pasifika Theme Override ===== */
+    /* ===== Pacific Theme Override ===== */
     :root {
       --ocean: #1177bb; --lagoon: #2a9d8f; --palm: #2e7d32; --sand: #f6efdf; --coconut:#3b3128; --coral: #ef6c57;
       --primary: var(--ocean); --secondary:var(--lagoon); --accent: var(--coral); --light: var(--sand); --dark: var(--coconut); --success: var(--palm); --border: #e6dcc9;
@@ -187,7 +187,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Pasifika Card Sort</h1>
+      <h1>Pacific Card Sorting Tool</h1>
       <div class="header-user-info">
         <div id="welcomeBanner" aria-live="polite"></div>
         <button id="logoutBtn" class="btn btn-accent hidden">Logout</button>
@@ -621,3 +621,4 @@
   </script>
 </body>
 </html>
+
